--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -1,5 +1,4 @@
 allow 102.130.113.9;
-allow 102.130.127.117;
 allow 102.219.85.85;
 allow 103.109.101.105;
 allow 103.126.161.54;
@@ -27,7 +26,6 @@ allow 104.244.73.136;
 allow 104.244.73.190;
 allow 104.244.73.193;
 allow 104.244.73.43;
-allow 104.244.74.23;
 allow 104.244.74.97;
 allow 104.244.75.74;
 allow 104.244.77.192;
@@ -63,7 +61,6 @@ allow 107.189.1.9;
 allow 107.189.1.96;
 allow 107.189.2.108;
 allow 107.189.28.199;
-allow 107.189.29.103;
 allow 107.189.30.236;
 allow 107.189.30.69;
 allow 107.189.30.86;
@@ -117,6 +114,7 @@ allow 109.70.100.69;
 allow 109.70.100.70;
 allow 109.70.100.71;
 allow 114.199.75.111;
+allow 118.163.74.160;
 allow 121.78.28.175;
 allow 123.253.35.32;
 allow 125.212.241.131;
@@ -135,7 +133,6 @@ allow 143.42.110.237;
 allow 143.42.199.223;
 allow 144.172.118.4;
 allow 144.172.118.55;
-allow 144.172.118.57;
 allow 144.172.73.11;
 allow 144.172.73.6;
 allow 144.217.80.80;
@@ -174,7 +171,6 @@ allow 164.132.172.209;
 allow 165.73.242.163;
 allow 166.70.207.2;
 allow 167.99.208.41;
-allow 168.100.8.44;
 allow 171.25.193.20;
 allow 171.25.193.234;
 allow 171.25.193.235;
@@ -188,6 +184,7 @@ allow 172.104.214.41;
 allow 172.232.161.205;
 allow 172.81.131.139;
 allow 172.81.131.156;
+allow 172.81.132.242;
 allow 172.81.132.94;
 allow 173.232.195.137;
 allow 173.232.195.144;
@@ -233,7 +230,6 @@ allow 179.43.182.232;
 allow 179.43.182.58;
 allow 179.48.251.188;
 allow 180.150.226.99;
-allow 18.235.109.25;
 allow 184.105.48.40;
 allow 185.100.85.132;
 allow 185.100.85.22;
@@ -536,11 +532,6 @@ allow 185.246.86.197;
 allow 185.247.184.105;
 allow 185.247.184.33;
 allow 185.252.232.218;
-allow 185.29.8.211;
-allow 185.29.8.212;
-allow 185.29.8.213;
-allow 185.29.8.214;
-allow 185.29.8.215;
 allow 185.34.33.2;
 allow 185.35.202.222;
 allow 185.38.175.133;
@@ -567,8 +558,6 @@ allow 190.120.229.98;
 allow 190.211.254.97;
 allow 191.252.220.31;
 allow 191.96.165.34;
-allow 192.153.57.177;
-allow 192.153.57.19;
 allow 192.210.255.181;
 allow 192.42.116.13;
 allow 192.42.116.14;
@@ -704,10 +693,8 @@ allow 199.195.253.124;
 allow 199.195.253.156;
 allow 199.195.253.180;
 allow 199.195.253.247;
-allow 199.249.230.120;
 allow 2001:1620:51a1:0:8aae:ddff:fe61:8ccc;
 allow 2001:1af8:4700:a114:6::1;
-allow 2001:1b60:2:1:3935:104:0:1;
 allow 2001:1b60:3:220:3039:101:0:1;
 allow 2001:1b60:3:221:3132:102:0:1;
 allow 2001:1b60:3:221:4134:101:0:1;
@@ -824,6 +811,7 @@ allow 2001:67c:89c:702:1ce:1ce:babe:9;
 allow 2001:780:107:b::85;
 allow 2001:910:1400:107::2;
 allow 2001:9b1:c300:3044::610;
+allow 2001:b030:2422::7234;
 allow 2001:bc8:1600:472a::1;
 allow 2001:bc8:700:9212::1;
 allow 2001:bf0:666::666;
@@ -835,6 +823,7 @@ allow 202.69.76.36;
 allow 202.94.246.210;
 allow 204.137.14.104;
 allow 204.137.14.105;
+allow 204.137.14.106;
 allow 204.137.14.92;
 allow 204.194.29.4;
 allow 204.85.191.7;
@@ -860,6 +849,7 @@ allow 204.8.96.116;
 allow 204.8.96.117;
 allow 204.8.96.118;
 allow 204.8.96.119;
+allow 204.8.96.120;
 allow 204.8.96.121;
 allow 204.8.96.122;
 allow 204.8.96.123;
@@ -918,6 +908,8 @@ allow 204.8.96.70;
 allow 204.8.96.72;
 allow 204.8.96.73;
 allow 204.8.96.74;
+allow 204.8.96.75;
+allow 204.8.96.76;
 allow 204.8.96.77;
 allow 204.8.96.78;
 allow 204.8.96.79;
@@ -939,7 +931,6 @@ allow 205.185.121.170;
 allow 205.185.123.93;
 allow 205.185.124.176;
 allow 205.185.124.193;
-allow 206.188.196.161;
 allow 206.237.98.52;
 allow 209.141.32.198;
 allow 209.141.38.110;
@@ -1001,7 +992,6 @@ allow 23.154.177.7;
 allow 23.154.177.8;
 allow 23.154.177.9;
 allow 23.155.24.6;
-allow 23.155.8.104;
 allow 23.184.48.208;
 allow 23.236.122.62;
 allow 23.26.133.239;
@@ -1025,7 +1015,6 @@ allow 2600:3c00::f03c:91ff:fe96:1cd9;
 allow 2600:3c03:e000:fa::3;
 allow 2600:3c03::f03c:91ff:fe24:47be;
 allow 2600:3c03::f03c:94ff:fed1:8c69;
-allow 2602:2e5::104;
 allow 2602:2e6:0:6::;
 allow 2602:f9f3:0:2::14;
 allow 2602:fc24:11:26c3::1;
@@ -1221,6 +1210,8 @@ allow 2620:7:6001::ffff:c759:e646;
 allow 2620:7:6001::ffff:c759:e648;
 allow 2620:7:6001::ffff:c759:e649;
 allow 2620:7:6001::ffff:c759:e64a;
+allow 2620:7:6001::ffff:c759:e64b;
+allow 2620:7:6001::ffff:c759:e64c;
 allow 2620:7:6001::ffff:c759:e64d;
 allow 2620:7:6001::ffff:c759:e64e;
 allow 2620:7:6001::ffff:c759:e64f;
@@ -1651,6 +1642,7 @@ allow 37.48.120.196;
 allow 37.48.70.156;
 allow 38.242.254.131;
 allow 38.97.116.244;
+allow 44.206.15.255;
 allow 45.12.3.80;
 allow 45.128.232.151;
 allow 45.132.246.245;
@@ -1688,7 +1680,6 @@ allow 45.151.167.11;
 allow 45.151.167.12;
 allow 45.151.167.13;
 allow 45.15.157.177;
-allow 45.61.137.5;
 allow 45.61.184.47;
 allow 45.61.185.172;
 allow 45.66.35.10;
@@ -1737,7 +1728,6 @@ allow 51.195.166.174;
 allow 51.210.138.64;
 allow 51.222.142.67;
 allow 51.222.84.46;
-allow 5.135.174.211;
 allow 51.38.113.118;
 allow 51.38.81.135;
 allow 51.75.64.23;
@@ -1774,7 +1764,6 @@ allow 5.255.99.124;
 allow 5.255.99.147;
 allow 5.255.99.5;
 allow 5.2.67.226;
-allow 5.2.79.179;
 allow 5.2.79.190;
 allow 54.224.79.94;
 allow 5.42.66.6;
@@ -1793,9 +1782,6 @@ allow 62.171.137.169;
 allow 62.182.83.179;
 allow 64.227.115.78;
 allow 64.5.123.66;
-allow 64.7.199.213;
-allow 65.38.121.223;
-allow 65.38.121.63;
 allow 66.146.193.33;
 allow 66.220.242.222;
 allow 67.219.109.141;
@@ -1803,8 +1789,6 @@ allow 71.19.144.106;
 allow 72.14.179.10;
 allow 72.167.47.69;
 allow 72.211.49.235;
-allow 72.5.42.211;
-allow 72.5.42.36;
 allow 74.207.248.172;
 allow 74.82.47.194;
 allow 77.105.146.42;
@@ -1830,7 +1814,6 @@ allow 80.210.78.252;
 allow 80.241.60.207;
 allow 80.67.167.81;
 allow 80.67.172.162;
-allow 80.78.21.251;
 allow 80.82.78.14;
 allow 81.16.33.42;
 allow 81.17.28.95;
@@ -1851,10 +1834,6 @@ allow 83.97.20.77;
 allow 84.16.224.227;
 allow 84.211.225.54;
 allow 84.239.46.144;
-allow 84.38.134.224;
-allow 84.38.134.225;
-allow 84.38.134.226;
-allow 84.38.134.227;
 allow 84.54.51.61;
 allow 84.54.51.68;
 allow 84.54.51.69;
@@ -1862,7 +1841,6 @@ allow 85.17.9.83;
 allow 85.204.116.211;
 allow 85.215.76.62;
 allow 86.104.194.13;
-allow 87.118.110.27;
 allow 87.118.115.44;
 allow 87.118.116.103;
 allow 87.118.116.90;
