--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -1,6 +1,5 @@
 allow 2001:1620:51a1:0:8aae:ddff:fe61:8ccc;
 allow 2001:1af8:4700:a114:6::1;
-allow 2001:1b60:2:1:3935:104:0:1;
 allow 2001:1b60:3:220:3039:101:0:1;
 allow 2001:1b60:3:221:3132:102:0:1;
 allow 2001:1b60:3:221:4134:101:0:1;
@@ -116,6 +115,7 @@ allow 2001:67c:89c:702:1ce:1ce:babe:9;
 allow 2001:780:107:b::85;
 allow 2001:910:1400:107::2;
 allow 2001:9b1:c300:3044::610;
+allow 2001:b030:2422::7234;
 allow 2001:bc8:1600:472a::1;
 allow 2001:bc8:700:9212::1;
 allow 2001:bf0:666::666;
@@ -127,7 +127,6 @@ allow 2600:3c00::f03c:91ff:fe96:1cd9;
 allow 2600:3c03:e000:fa::3;
 allow 2600:3c03::f03c:91ff:fe24:47be;
 allow 2600:3c03::f03c:94ff:fed1:8c69;
-allow 2602:2e5::104;
 allow 2602:2e6:0:6::;
 allow 2602:f9f3:0:2::14;
 allow 2602:fc24:11:26c3::1;
@@ -323,6 +322,8 @@ allow 2620:7:6001::ffff:c759:e646;
 allow 2620:7:6001::ffff:c759:e648;
 allow 2620:7:6001::ffff:c759:e649;
 allow 2620:7:6001::ffff:c759:e64a;
+allow 2620:7:6001::ffff:c759:e64b;
+allow 2620:7:6001::ffff:c759:e64c;
 allow 2620:7:6001::ffff:c759:e64d;
 allow 2620:7:6001::ffff:c759:e64e;
 allow 2620:7:6001::ffff:c759:e64f;
