--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -1,5 +1,4 @@
 set_real_ip_from 102.130.113.9;
-set_real_ip_from 102.130.127.117;
 set_real_ip_from 102.219.85.85;
 set_real_ip_from 103.109.101.105;
 set_real_ip_from 103.126.161.54;
@@ -27,7 +26,6 @@ set_real_ip_from 104.244.73.136;
 set_real_ip_from 104.244.73.190;
 set_real_ip_from 104.244.73.193;
 set_real_ip_from 104.244.73.43;
-set_real_ip_from 104.244.74.23;
 set_real_ip_from 104.244.74.97;
 set_real_ip_from 104.244.75.74;
 set_real_ip_from 104.244.77.192;
@@ -63,7 +61,6 @@ set_real_ip_from 107.189.1.9;
 set_real_ip_from 107.189.1.96;
 set_real_ip_from 107.189.2.108;
 set_real_ip_from 107.189.28.199;
-set_real_ip_from 107.189.29.103;
 set_real_ip_from 107.189.30.236;
 set_real_ip_from 107.189.30.69;
 set_real_ip_from 107.189.30.86;
@@ -117,6 +114,7 @@ set_real_ip_from 109.70.100.69;
 set_real_ip_from 109.70.100.70;
 set_real_ip_from 109.70.100.71;
 set_real_ip_from 114.199.75.111;
+set_real_ip_from 118.163.74.160;
 set_real_ip_from 121.78.28.175;
 set_real_ip_from 123.253.35.32;
 set_real_ip_from 125.212.241.131;
@@ -135,7 +133,6 @@ set_real_ip_from 143.42.110.237;
 set_real_ip_from 143.42.199.223;
 set_real_ip_from 144.172.118.4;
 set_real_ip_from 144.172.118.55;
-set_real_ip_from 144.172.118.57;
 set_real_ip_from 144.172.73.11;
 set_real_ip_from 144.172.73.6;
 set_real_ip_from 144.217.80.80;
@@ -174,7 +171,6 @@ set_real_ip_from 164.132.172.209;
 set_real_ip_from 165.73.242.163;
 set_real_ip_from 166.70.207.2;
 set_real_ip_from 167.99.208.41;
-set_real_ip_from 168.100.8.44;
 set_real_ip_from 171.25.193.20;
 set_real_ip_from 171.25.193.234;
 set_real_ip_from 171.25.193.235;
@@ -188,6 +184,7 @@ set_real_ip_from 172.104.214.41;
 set_real_ip_from 172.232.161.205;
 set_real_ip_from 172.81.131.139;
 set_real_ip_from 172.81.131.156;
+set_real_ip_from 172.81.132.242;
 set_real_ip_from 172.81.132.94;
 set_real_ip_from 173.232.195.137;
 set_real_ip_from 173.232.195.144;
@@ -233,7 +230,6 @@ set_real_ip_from 179.43.182.232;
 set_real_ip_from 179.43.182.58;
 set_real_ip_from 179.48.251.188;
 set_real_ip_from 180.150.226.99;
-set_real_ip_from 18.235.109.25;
 set_real_ip_from 184.105.48.40;
 set_real_ip_from 185.100.85.132;
 set_real_ip_from 185.100.85.22;
@@ -536,11 +532,6 @@ set_real_ip_from 185.246.86.197;
 set_real_ip_from 185.247.184.105;
 set_real_ip_from 185.247.184.33;
 set_real_ip_from 185.252.232.218;
-set_real_ip_from 185.29.8.211;
-set_real_ip_from 185.29.8.212;
-set_real_ip_from 185.29.8.213;
-set_real_ip_from 185.29.8.214;
-set_real_ip_from 185.29.8.215;
 set_real_ip_from 185.34.33.2;
 set_real_ip_from 185.35.202.222;
 set_real_ip_from 185.38.175.133;
@@ -567,8 +558,6 @@ set_real_ip_from 190.120.229.98;
 set_real_ip_from 190.211.254.97;
 set_real_ip_from 191.252.220.31;
 set_real_ip_from 191.96.165.34;
-set_real_ip_from 192.153.57.177;
-set_real_ip_from 192.153.57.19;
 set_real_ip_from 192.210.255.181;
 set_real_ip_from 192.42.116.13;
 set_real_ip_from 192.42.116.14;
@@ -704,10 +693,8 @@ set_real_ip_from 199.195.253.124;
 set_real_ip_from 199.195.253.156;
 set_real_ip_from 199.195.253.180;
 set_real_ip_from 199.195.253.247;
-set_real_ip_from 199.249.230.120;
 set_real_ip_from 2001:1620:51a1:0:8aae:ddff:fe61:8ccc;
 set_real_ip_from 2001:1af8:4700:a114:6::1;
-set_real_ip_from 2001:1b60:2:1:3935:104:0:1;
 set_real_ip_from 2001:1b60:3:220:3039:101:0:1;
 set_real_ip_from 2001:1b60:3:221:3132:102:0:1;
 set_real_ip_from 2001:1b60:3:221:4134:101:0:1;
@@ -824,6 +811,7 @@ set_real_ip_from 2001:67c:89c:702:1ce:1ce:babe:9;
 set_real_ip_from 2001:780:107:b::85;
 set_real_ip_from 2001:910:1400:107::2;
 set_real_ip_from 2001:9b1:c300:3044::610;
+set_real_ip_from 2001:b030:2422::7234;
 set_real_ip_from 2001:bc8:1600:472a::1;
 set_real_ip_from 2001:bc8:700:9212::1;
 set_real_ip_from 2001:bf0:666::666;
@@ -835,6 +823,7 @@ set_real_ip_from 202.69.76.36;
 set_real_ip_from 202.94.246.210;
 set_real_ip_from 204.137.14.104;
 set_real_ip_from 204.137.14.105;
+set_real_ip_from 204.137.14.106;
 set_real_ip_from 204.137.14.92;
 set_real_ip_from 204.194.29.4;
 set_real_ip_from 204.85.191.7;
@@ -860,6 +849,7 @@ set_real_ip_from 204.8.96.116;
 set_real_ip_from 204.8.96.117;
 set_real_ip_from 204.8.96.118;
 set_real_ip_from 204.8.96.119;
+set_real_ip_from 204.8.96.120;
 set_real_ip_from 204.8.96.121;
 set_real_ip_from 204.8.96.122;
 set_real_ip_from 204.8.96.123;
@@ -918,6 +908,8 @@ set_real_ip_from 204.8.96.70;
 set_real_ip_from 204.8.96.72;
 set_real_ip_from 204.8.96.73;
 set_real_ip_from 204.8.96.74;
+set_real_ip_from 204.8.96.75;
+set_real_ip_from 204.8.96.76;
 set_real_ip_from 204.8.96.77;
 set_real_ip_from 204.8.96.78;
 set_real_ip_from 204.8.96.79;
@@ -939,7 +931,6 @@ set_real_ip_from 205.185.121.170;
 set_real_ip_from 205.185.123.93;
 set_real_ip_from 205.185.124.176;
 set_real_ip_from 205.185.124.193;
-set_real_ip_from 206.188.196.161;
 set_real_ip_from 206.237.98.52;
 set_real_ip_from 209.141.32.198;
 set_real_ip_from 209.141.38.110;
@@ -1001,7 +992,6 @@ set_real_ip_from 23.154.177.7;
 set_real_ip_from 23.154.177.8;
 set_real_ip_from 23.154.177.9;
 set_real_ip_from 23.155.24.6;
-set_real_ip_from 23.155.8.104;
 set_real_ip_from 23.184.48.208;
 set_real_ip_from 23.236.122.62;
 set_real_ip_from 23.26.133.239;
@@ -1025,7 +1015,6 @@ set_real_ip_from 2600:3c00::f03c:91ff:fe96:1cd9;
 set_real_ip_from 2600:3c03:e000:fa::3;
 set_real_ip_from 2600:3c03::f03c:91ff:fe24:47be;
 set_real_ip_from 2600:3c03::f03c:94ff:fed1:8c69;
-set_real_ip_from 2602:2e5::104;
 set_real_ip_from 2602:2e6:0:6::;
 set_real_ip_from 2602:f9f3:0:2::14;
 set_real_ip_from 2602:fc24:11:26c3::1;
@@ -1221,6 +1210,8 @@ set_real_ip_from 2620:7:6001::ffff:c759:e646;
 set_real_ip_from 2620:7:6001::ffff:c759:e648;
 set_real_ip_from 2620:7:6001::ffff:c759:e649;
 set_real_ip_from 2620:7:6001::ffff:c759:e64a;
+set_real_ip_from 2620:7:6001::ffff:c759:e64b;
+set_real_ip_from 2620:7:6001::ffff:c759:e64c;
 set_real_ip_from 2620:7:6001::ffff:c759:e64d;
 set_real_ip_from 2620:7:6001::ffff:c759:e64e;
 set_real_ip_from 2620:7:6001::ffff:c759:e64f;
@@ -1651,6 +1642,7 @@ set_real_ip_from 37.48.120.196;
 set_real_ip_from 37.48.70.156;
 set_real_ip_from 38.242.254.131;
 set_real_ip_from 38.97.116.244;
+set_real_ip_from 44.206.15.255;
 set_real_ip_from 45.12.3.80;
 set_real_ip_from 45.128.232.151;
 set_real_ip_from 45.132.246.245;
@@ -1688,7 +1680,6 @@ set_real_ip_from 45.151.167.11;
 set_real_ip_from 45.151.167.12;
 set_real_ip_from 45.151.167.13;
 set_real_ip_from 45.15.157.177;
-set_real_ip_from 45.61.137.5;
 set_real_ip_from 45.61.184.47;
 set_real_ip_from 45.61.185.172;
 set_real_ip_from 45.66.35.10;
@@ -1737,7 +1728,6 @@ set_real_ip_from 51.195.166.174;
 set_real_ip_from 51.210.138.64;
 set_real_ip_from 51.222.142.67;
 set_real_ip_from 51.222.84.46;
-set_real_ip_from 5.135.174.211;
 set_real_ip_from 51.38.113.118;
 set_real_ip_from 51.38.81.135;
 set_real_ip_from 51.75.64.23;
@@ -1774,7 +1764,6 @@ set_real_ip_from 5.255.99.124;
 set_real_ip_from 5.255.99.147;
 set_real_ip_from 5.255.99.5;
 set_real_ip_from 5.2.67.226;
-set_real_ip_from 5.2.79.179;
 set_real_ip_from 5.2.79.190;
 set_real_ip_from 54.224.79.94;
 set_real_ip_from 5.42.66.6;
@@ -1793,9 +1782,6 @@ set_real_ip_from 62.171.137.169;
 set_real_ip_from 62.182.83.179;
 set_real_ip_from 64.227.115.78;
 set_real_ip_from 64.5.123.66;
-set_real_ip_from 64.7.199.213;
-set_real_ip_from 65.38.121.223;
-set_real_ip_from 65.38.121.63;
 set_real_ip_from 66.146.193.33;
 set_real_ip_from 66.220.242.222;
 set_real_ip_from 67.219.109.141;
@@ -1803,8 +1789,6 @@ set_real_ip_from 71.19.144.106;
 set_real_ip_from 72.14.179.10;
 set_real_ip_from 72.167.47.69;
 set_real_ip_from 72.211.49.235;
-set_real_ip_from 72.5.42.211;
-set_real_ip_from 72.5.42.36;
 set_real_ip_from 74.207.248.172;
 set_real_ip_from 74.82.47.194;
 set_real_ip_from 77.105.146.42;
@@ -1830,7 +1814,6 @@ set_real_ip_from 80.210.78.252;
 set_real_ip_from 80.241.60.207;
 set_real_ip_from 80.67.167.81;
 set_real_ip_from 80.67.172.162;
-set_real_ip_from 80.78.21.251;
 set_real_ip_from 80.82.78.14;
 set_real_ip_from 81.16.33.42;
 set_real_ip_from 81.17.28.95;
@@ -1851,10 +1834,6 @@ set_real_ip_from 83.97.20.77;
 set_real_ip_from 84.16.224.227;
 set_real_ip_from 84.211.225.54;
 set_real_ip_from 84.239.46.144;
-set_real_ip_from 84.38.134.224;
-set_real_ip_from 84.38.134.225;
-set_real_ip_from 84.38.134.226;
-set_real_ip_from 84.38.134.227;
 set_real_ip_from 84.54.51.61;
 set_real_ip_from 84.54.51.68;
 set_real_ip_from 84.54.51.69;
@@ -1862,7 +1841,6 @@ set_real_ip_from 85.17.9.83;
 set_real_ip_from 85.204.116.211;
 set_real_ip_from 85.215.76.62;
 set_real_ip_from 86.104.194.13;
-set_real_ip_from 87.118.110.27;
 set_real_ip_from 87.118.115.44;
 set_real_ip_from 87.118.116.103;
 set_real_ip_from 87.118.116.90;
