--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -126,6 +126,7 @@ allow 136.244.111.163;
 allow 137.63.71.51;
 allow 138.59.18.110;
 allow 139.99.172.11;
+allow 141.239.149.94;
 allow 141.98.11.62;
 allow 142.44.234.69;
 allow 143.110.156.176;
@@ -277,7 +278,6 @@ allow 185.165.169.42;
 allow 185.165.171.84;
 allow 185.165.190.111;
 allow 185.170.114.25;
-allow 185.174.136.114;
 allow 185.181.60.135;
 allow 185.181.61.115;
 allow 185.181.61.142;
@@ -669,7 +669,6 @@ allow 195.176.3.24;
 allow 195.80.151.30;
 allow 195.88.74.206;
 allow 198.144.178.163;
-allow 198.167.206.166;
 allow 198.23.133.132;
 allow 198.251.84.163;
 allow 198.251.84.237;
@@ -815,7 +814,6 @@ allow 2001:910:1400:107::2;
 allow 2001:9b1:c300:3044::610;
 allow 2001:b030:2422::7234;
 allow 2001:bc8:1600:472a::1;
-allow 2001:bc8:700:9212::1;
 allow 2001:bf0:666::666;
 allow 2001:df7:7e80:100:9f2b:1d15:c713:52ad;
 allow 202.182.99.129;
@@ -994,6 +992,7 @@ allow 23.154.177.7;
 allow 23.154.177.8;
 allow 23.154.177.9;
 allow 23.155.24.6;
+allow 23.155.8.104;
 allow 23.184.48.208;
 allow 23.236.122.62;
 allow 23.26.133.239;
@@ -1017,6 +1016,7 @@ allow 2600:3c00::f03c:91ff:fe96:1cd9;
 allow 2600:3c03:e000:fa::3;
 allow 2600:3c03::f03c:91ff:fe24:47be;
 allow 2600:3c03::f03c:94ff:fed1:8c69;
+allow 2602:2e5::104;
 allow 2602:2e6:0:6::;
 allow 2602:f9f3:0:2::14;
 allow 2602:fc24:11:26c3::1;
@@ -1258,7 +1258,6 @@ allow 2a02:13f0:8100:6:688:5fe9:2e1f:1;
 allow 2a02:16d0:0:5::1;
 allow 2a02:418:6017::147;
 allow 2a02:418:6017::148;
-allow 2a02:6f8:2020:206:b::166;
 allow 2a02:7aa0:1619::ba45:e7f2;
 allow 2a02:898:218::1;
 allow 2a02:898:218::2;
@@ -1342,6 +1341,7 @@ allow 2a04:52c0:104:31e6::1;
 allow 2a04:52c0:104:ad97::1;
 allow 2a04:52c0:104:fe02::1;
 allow 2a04:52c0:105:78fc::1;
+allow 2a04:52c0:105:82c0::1;
 allow 2a04:52c0:106:394::1;
 allow 2a04:52c0:106:d219::1;
 allow 2a04:52c0:108:4b9e::1;
@@ -1683,7 +1683,6 @@ allow 45.151.167.11;
 allow 45.151.167.12;
 allow 45.151.167.13;
 allow 45.15.157.177;
-allow 45.15.158.39;
 allow 45.61.184.47;
 allow 45.61.185.172;
 allow 45.66.35.10;
@@ -1725,7 +1724,6 @@ allow 50.3.182.133;
 allow 50.3.182.156;
 allow 51.15.249.160;
 allow 51.15.59.15;
-allow 51.158.115.62;
 allow 51.178.45.216;
 allow 51.195.166.174;
 allow 51.210.138.64;
@@ -1745,6 +1743,7 @@ allow 5.196.73.12;
 allow 5.196.8.113;
 allow 5.196.95.34;
 allow 5.255.100.219;
+allow 5.255.100.224;
 allow 5.255.100.26;
 allow 5.255.101.10;
 allow 5.255.101.131;
@@ -1769,6 +1768,7 @@ allow 5.255.99.5;
 allow 5.2.67.226;
 allow 5.2.79.179;
 allow 5.2.79.190;
+allow 54.146.25.254;
 allow 54.224.79.94;
 allow 5.42.66.6;
 allow 5.42.80.232;
@@ -1818,7 +1818,7 @@ allow 80.210.78.252;
 allow 80.241.60.207;
 allow 80.67.167.81;
 allow 80.67.172.162;
-allow 80.78.21.157;
+allow 80.78.21.160;
 allow 80.82.78.14;
 allow 81.16.33.42;
 allow 81.17.28.95;
@@ -1899,6 +1899,7 @@ allow 92.119.126.161;
 allow 92.205.129.119;
 allow 92.243.24.163;
 allow 92.246.84.133;
+allow 92.249.48.135;
 allow 93.123.12.112;
 allow 93.90.74.31;
 allow 93.95.225.141;
