--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -117,7 +117,6 @@ allow 2001:910:1400:107::2;
 allow 2001:9b1:c300:3044::610;
 allow 2001:b030:2422::7234;
 allow 2001:bc8:1600:472a::1;
-allow 2001:bc8:700:9212::1;
 allow 2001:bf0:666::666;
 allow 2001:df7:7e80:100:9f2b:1d15:c713:52ad;
 allow 2401:c080:2000:111f:5400:4ff:fea3:9c02;
@@ -127,6 +126,7 @@ allow 2600:3c00::f03c:91ff:fe96:1cd9;
 allow 2600:3c03:e000:fa::3;
 allow 2600:3c03::f03c:91ff:fe24:47be;
 allow 2600:3c03::f03c:94ff:fed1:8c69;
+allow 2602:2e5::104;
 allow 2602:2e6:0:6::;
 allow 2602:f9f3:0:2::14;
 allow 2602:fc24:11:26c3::1;
@@ -367,7 +367,6 @@ allow 2a02:13f0:8100:6:688:5fe9:2e1f:1;
 allow 2a02:16d0:0:5::1;
 allow 2a02:418:6017::147;
 allow 2a02:418:6017::148;
-allow 2a02:6f8:2020:206:b::166;
 allow 2a02:7aa0:1619::ba45:e7f2;
 allow 2a02:898:218::1;
 allow 2a02:898:218::2;
@@ -451,6 +450,7 @@ allow 2a04:52c0:104:31e6::1;
 allow 2a04:52c0:104:ad97::1;
 allow 2a04:52c0:104:fe02::1;
 allow 2a04:52c0:105:78fc::1;
+allow 2a04:52c0:105:82c0::1;
 allow 2a04:52c0:106:394::1;
 allow 2a04:52c0:106:d219::1;
 allow 2a04:52c0:108:4b9e::1;
